# nrf24-rs

./: Cargo.toml  README.md
src/: bitfields.rs  lib.rs
